@@ -22,21 +22,21 @@ import com.amazonaws.auth.AnonymousAWSCredentials;
 import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.s3.AmazonS3Client;
 import com.google.api.HttpBody;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
 import com.google.protobuf.Empty;
 import com.yelp.nrtsearch.server.LuceneServerTestConfigurationFactory;
+import com.yelp.nrtsearch.server.backup.Archiver;
+import com.yelp.nrtsearch.server.backup.ArchiverImpl;
+import com.yelp.nrtsearch.server.backup.TarImpl;
 import com.yelp.nrtsearch.server.config.LuceneServerConfiguration;
+import com.yelp.nrtsearch.server.grpc.LuceneServer.LuceneServerImpl;
 import com.yelp.nrtsearch.server.grpc.SearchResponse.Hit.CompositeFieldValue;
-import com.yelp.nrtsearch.server.luceneserver.GlobalState;
-import com.yelp.nrtsearch.server.utils.Archiver;
-import com.yelp.nrtsearch.server.utils.ArchiverImpl;
-import com.yelp.nrtsearch.server.utils.TarImpl;
+import com.yelp.nrtsearch.server.luceneserver.search.cache.NrtQueryCache;
 import io.findify.s3mock.S3Mock;
 import io.grpc.StatusRuntimeException;
 import io.grpc.testing.GrpcCleanupRule;
 import io.prometheus.client.CollectorRegistry;
 import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -51,8 +51,12 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.apache.lucene.search.IndexSearcher;
+import org.apache.lucene.search.QueryCache;
 import org.hamcrest.core.IsCollectionContaining;
 import org.junit.After;
 import org.junit.Before;
@@ -72,6 +76,7 @@ public class LuceneServerTest {
           "vendor_name_atom",
           "count",
           "long_field",
+          "long_field_multi",
           "double_field_multi",
           "double_field",
           "float_field_multi",
@@ -79,7 +84,8 @@ public class LuceneServerTest {
           "boolean_field_multi",
           "boolean_field",
           "description",
-          "date");
+          "date",
+          "date_multi");
   public static final List<String> INDEX_VIRTUAL_FIELDS =
       Arrays.asList("virtual_field", "virtual_field_w_score");
   public static final List<String> QUERY_VIRTUAL_FIELDS =
@@ -181,18 +187,16 @@ public class LuceneServerTest {
     String testIndex = "test_index";
     LuceneServerConfiguration luceneServerConfiguration =
         LuceneServerTestConfigurationFactory.getConfig(Mode.STANDALONE, folder.getRoot());
-    GlobalState globalState = new GlobalState(luceneServerConfiguration);
     return new GrpcServer(
         collectorRegistry,
         grpcCleanup,
         luceneServerConfiguration,
         folder,
-        false,
-        globalState,
+        null,
         luceneServerConfiguration.getIndexDir(),
         testIndex,
-        globalState.getPort(),
-        null,
+        luceneServerConfiguration.getPort(),
+        archiver,
         Collections.emptyList());
   }
 
@@ -202,17 +206,15 @@ public class LuceneServerTest {
     LuceneServerConfiguration luceneServerReplicaConfiguration =
         LuceneServerTestConfigurationFactory.getConfig(
             Mode.REPLICA, folder.getRoot(), getExtraConfig());
-    GlobalState globalStateSecondary = new GlobalState(luceneServerReplicaConfiguration);
 
     return new GrpcServer(
         grpcCleanup,
         luceneServerReplicaConfiguration,
         folder,
-        false,
-        globalStateSecondary,
+        null,
         luceneServerReplicaConfiguration.getIndexDir(),
         testIndex,
-        globalStateSecondary.getPort(),
+        luceneServerReplicaConfiguration.getPort(),
         archiver);
   }
 
@@ -222,7 +224,8 @@ public class LuceneServerTest {
         "warmer:",
         "  maxWarmingQueries: 10",
         "  warmOnStartup: true",
-        "  warmingParallelism: 1");
+        "  warmingParallelism: 1",
+        "syncInitialNrtPoint: false");
   }
 
   @Test
@@ -268,6 +271,32 @@ public class LuceneServerTest {
     assertEquals(0, reply.getMaxDoc());
     assertEquals(0, reply.getNumDocs());
     assertTrue(!reply.getSegments().isEmpty());
+  }
+
+  @Test
+  public void testStartIndexWithEmptyString() {
+    LuceneServerGrpc.LuceneServerBlockingStub blockingStub = grpcServer.getBlockingStub();
+    try {
+      // start the index
+      String emptyTestIndex = "";
+      blockingStub.startIndex(StartIndexRequest.newBuilder().setIndexName(emptyTestIndex).build());
+      fail("The above line must throw an exception");
+    } catch (StatusRuntimeException e) {
+      assertEquals(
+          String.format(
+              "INVALID_ARGUMENT: error while trying to start index since indexName was empty."),
+          e.getMessage());
+    }
+    try {
+      // start the index
+      blockingStub.startIndex(StartIndexRequest.newBuilder().build());
+      fail("The above line must throw an exception");
+    } catch (StatusRuntimeException e) {
+      assertEquals(
+          String.format(
+              "INVALID_ARGUMENT: error while trying to start index since indexName was empty."),
+          e.getMessage());
+    }
   }
 
   @Test
@@ -532,7 +561,7 @@ public class LuceneServerTest {
     assertEquals(0, statsResponse.getMaxDoc());
     assertEquals(0, statsResponse.getOrd());
     assertEquals(0, statsResponse.getCurrentSearcher().getNumDocs());
-    assertEquals(0, statsResponse.getDirSize());
+    assertTrue(statsResponse.getDirSize() > 0);
     assertEquals("started", statsResponse.getState());
     GrpcServer.TestServer testAddDocs =
         new GrpcServer.TestServer(grpcServer, false, Mode.STANDALONE);
@@ -720,77 +749,6 @@ public class LuceneServerTest {
     assertEquals("ok", deleteIndexResponse.getOk());
   }
 
-  /**
-   * This test creates the index, deletes the same index and then creates the same index again. This
-   * verifies whether the global state is correctly updated, flushed to disk and the previous global
-   * states are deleted.
-   */
-  @Test
-  public void testReCreateDeletedIndex() throws IOException {
-    String indexName = "test_idx_1";
-    LuceneServerGrpc.LuceneServerBlockingStub blockingStub = grpcServer.getBlockingStub();
-
-    GlobalState globalState = grpcServer.getGlobalState();
-    // verify that globalState has no content
-    assertEquals(0, Files.list(globalState.getStateDir()).count());
-
-    CreateIndexRequest createIndexRequest =
-        CreateIndexRequest.newBuilder().setIndexName(indexName).build();
-    CreateIndexResponse createIndexResponse = blockingStub.createIndex(createIndexRequest);
-    assertEquals(
-        String.format("Created Index name: %s", indexName, grpcServer.getIndexDir()),
-        createIndexResponse.getResponse());
-
-    // verify that only indices.0 exists and has the same content on disk as in-memory
-    assertEquals(1, Files.list(globalState.getStateDir()).count());
-    assertEquals(
-        "indices.0",
-        Files.list(globalState.getStateDir()).findAny().get().getFileName().toString());
-
-    Path primaryStateIndexPath = globalState.getStateDir().resolve("indices.0");
-    JsonObject persistedIndexNames =
-        JsonParser.parseString(Files.readString(primaryStateIndexPath)).getAsJsonObject();
-
-    assertEquals(globalState.getIndexNames(), persistedIndexNames.keySet());
-
-    // delete the index
-    DeleteIndexRequest deleteIndexRequest =
-        DeleteIndexRequest.newBuilder().setIndexName(indexName).build();
-    DeleteIndexResponse deleteIndexResponse =
-        grpcServer.getBlockingStub().deleteIndex(deleteIndexRequest);
-
-    // verify that globalState indices.1 exists only and has the required empty content
-    assertEquals(1, Files.list(globalState.getStateDir()).count());
-    assertEquals(
-        "indices.1",
-        Files.list(globalState.getStateDir()).findAny().get().getFileName().toString());
-
-    primaryStateIndexPath = globalState.getStateDir().resolve("indices.1");
-    persistedIndexNames =
-        JsonParser.parseString(Files.readString(primaryStateIndexPath)).getAsJsonObject();
-
-    assertEquals(globalState.getIndexNames(), persistedIndexNames.keySet());
-
-    // create the index
-    createIndexRequest = CreateIndexRequest.newBuilder().setIndexName(indexName).build();
-    createIndexResponse = blockingStub.createIndex(createIndexRequest);
-    assertEquals(
-        String.format("Created Index name: %s", indexName, grpcServer.getIndexDir()),
-        createIndexResponse.getResponse());
-
-    // verify that globalState indices.2 exists only and has the required content
-    assertEquals(1, Files.list(globalState.getStateDir()).count());
-    assertEquals(
-        "indices.2",
-        Files.list(globalState.getStateDir()).findAny().get().getFileName().toString());
-
-    primaryStateIndexPath = globalState.getStateDir().resolve("indices.2");
-    persistedIndexNames =
-        JsonParser.parseString(Files.readString(primaryStateIndexPath)).getAsJsonObject();
-
-    assertEquals(globalState.getIndexNames(), persistedIndexNames.keySet());
-  }
-
   @Test
   public void testSearchBasic() throws IOException, InterruptedException {
     GrpcServer.TestServer testAddDocs =
@@ -819,6 +777,35 @@ public class LuceneServerTest {
     checkHits(firstHit);
     SearchResponse.Hit secondHit = searchResponse.getHits(1);
     checkHits(secondHit);
+  }
+
+  @Test
+  public void testSearchFetchingAllFieldsWithWildcard() throws IOException, InterruptedException {
+    new GrpcServer.IndexAndRoleManager(grpcServer)
+        .createStartIndexAndRegisterFields(
+            Mode.STANDALONE, 0, false, "registerFieldsWildcardRetrieval.json");
+    new GrpcServer.TestServer(grpcServer, false, Mode.STANDALONE)
+        .addDocuments("addDocsWildcardRetrieval.csv");
+
+    grpcServer
+        .getBlockingStub()
+        .refresh(RefreshRequest.newBuilder().setIndexName(grpcServer.getTestIndex()).build());
+
+    SearchResponse searchResponseWithWildcard =
+        grpcServer
+            .getBlockingStub()
+            .search(
+                SearchRequest.newBuilder()
+                    .setIndexName(grpcServer.getTestIndex())
+                    .setStartHit(0)
+                    .setTopHits(10)
+                    .addRetrieveFields("*")
+                    .build());
+
+    assertEquals(2, searchResponseWithWildcard.getTotalHits().getValue());
+    assertEquals(2, searchResponseWithWildcard.getHitsList().size());
+    checkHits(searchResponseWithWildcard.getHits(0));
+    checkHits(searchResponseWithWildcard.getHits(1));
   }
 
   @Test
@@ -990,9 +977,11 @@ public class LuceneServerTest {
                   .build());
       fail("Expecting exception on the previous line");
     } catch (StatusRuntimeException e) {
-      assertEquals(
-          "UNKNOWN: Unable to backup warming queries since uptime is 0 minutes, which is less than threshold 1000",
-          e.getMessage());
+      Pattern pattern =
+          Pattern.compile(
+              "UNKNOWN: Unable to backup warming queries since uptime is [0-9] minutes, which is less than threshold 1000");
+      Matcher m = pattern.matcher(e.getMessage());
+      assertTrue(m.matches());
     }
 
     // Should fail; does not meet NumQueriesThreshold
@@ -1091,8 +1080,8 @@ public class LuceneServerTest {
         CreateSnapshotRequest.newBuilder().setIndexName(grpcServer.getTestIndex()).build();
     CreateSnapshotResponse createSnapshotResponse =
         grpcServer.getBlockingStub().createSnapshot(createSnapshotRequest);
-    assertEquals(1, createSnapshotResponse.getSnapshotId().getIndexGen());
-    assertEquals(0, createSnapshotResponse.getSnapshotId().getStateGen());
+    assertEquals(2, createSnapshotResponse.getSnapshotId().getIndexGen());
+    assertEquals(-1, createSnapshotResponse.getSnapshotId().getStateGen());
 
     // add more documents and another commit to create another index gen
     testAddDocs.addDocuments();
@@ -1100,14 +1089,14 @@ public class LuceneServerTest {
 
     // create another snapshot
     createSnapshotResponse = grpcServer.getBlockingStub().createSnapshot(createSnapshotRequest);
-    assertEquals(2, createSnapshotResponse.getSnapshotId().getIndexGen());
-    assertEquals(1, createSnapshotResponse.getSnapshotId().getStateGen());
+    assertEquals(3, createSnapshotResponse.getSnapshotId().getIndexGen());
+    assertEquals(-1, createSnapshotResponse.getSnapshotId().getStateGen());
 
     // Release the first snapshot with index and state gen
     ReleaseSnapshotRequest releaseSnapshotRequest =
         ReleaseSnapshotRequest.newBuilder()
             .setIndexName(grpcServer.getTestIndex())
-            .setSnapshotId(SnapshotId.newBuilder().setIndexGen(1).setStateGen(0))
+            .setSnapshotId(SnapshotId.newBuilder().setIndexGen(2).setStateGen(-1))
             .build();
     ReleaseSnapshotResponse releaseSnapshotResponse =
         grpcServer.getBlockingStub().releaseSnapshot(releaseSnapshotRequest);
@@ -1117,7 +1106,7 @@ public class LuceneServerTest {
     releaseSnapshotRequest =
         ReleaseSnapshotRequest.newBuilder()
             .setIndexName(grpcServer.getTestIndex())
-            .setSnapshotId(SnapshotId.newBuilder().setIndexGen(2).setStateGen(0))
+            .setSnapshotId(SnapshotId.newBuilder().setIndexGen(3).setStateGen(-1))
             .build();
     releaseSnapshotResponse = grpcServer.getBlockingStub().releaseSnapshot(releaseSnapshotRequest);
     assertTrue(releaseSnapshotResponse.getSuccess());
@@ -1145,7 +1134,7 @@ public class LuceneServerTest {
         CreateSnapshotRequest.newBuilder().setIndexName(grpcServer.getTestIndex()).build();
     CreateSnapshotResponse createSnapshotResponse =
         grpcServer.getBlockingStub().createSnapshot(createSnapshotRequest);
-    assertEquals(1, createSnapshotResponse.getSnapshotId().getIndexGen());
+    assertEquals(2, createSnapshotResponse.getSnapshotId().getIndexGen());
 
     // add more documents and another commit to create another index gen
     testAddDocs.addDocuments();
@@ -1153,7 +1142,7 @@ public class LuceneServerTest {
 
     // create another snapshot
     createSnapshotResponse = grpcServer.getBlockingStub().createSnapshot(createSnapshotRequest);
-    assertEquals(2, createSnapshotResponse.getSnapshotId().getIndexGen());
+    assertEquals(3, createSnapshotResponse.getSnapshotId().getIndexGen());
 
     GetAllSnapshotGenRequest getAllSnapshotGenRequest =
         GetAllSnapshotGenRequest.newBuilder().setIndexName(grpcServer.getTestIndex()).build();
@@ -1161,7 +1150,7 @@ public class LuceneServerTest {
         grpcServer.getBlockingStub().getAllSnapshotIndexGen(getAllSnapshotGenRequest);
 
     assertThat(
-        getAllSnapshotGenResponse.getIndexGensList(), IsCollectionContaining.hasItems(1L, 2L));
+        getAllSnapshotGenResponse.getIndexGensList(), IsCollectionContaining.hasItems(2L, 3L));
   }
 
   @Test
@@ -1184,23 +1173,39 @@ public class LuceneServerTest {
   }
 
   @Test
-  public void testReady() {
+  public void testReady() throws IOException {
     LuceneServerGrpc.LuceneServerBlockingStub blockingStub = grpcServer.getBlockingStub();
     String index1 = "index1";
     String index2 = "index2";
-    for (String indexName : List.of(index1, index2)) {
+    String index3 = "index3";
+
+    // Create all indices
+    for (String indexName : List.of(index1, index2, index3)) {
       CreateIndexResponse createIndexResponse =
           blockingStub.createIndex(CreateIndexRequest.newBuilder().setIndexName(indexName).build());
       String expectedResponse =
           String.format("Created Index name: %s", indexName, grpcServer.getIndexDir());
       assertEquals(expectedResponse, createIndexResponse.getResponse());
     }
-    StartIndexRequest startIndexRequest =
-        StartIndexRequest.newBuilder().setIndexName(index2).setMode(Mode.STANDALONE).build();
-    StartIndexResponse startIndexResponse = blockingStub.startIndex(startIndexRequest);
-    assertEquals(0, startIndexResponse.getNumDocs());
 
-    for (String indexNames : Arrays.asList("", "index1", "index1,index2")) {
+    // Start indices 2 and 3
+    for (String indexName : List.of(index2, index3)) {
+      StartIndexRequest startIndexRequest =
+          StartIndexRequest.newBuilder().setIndexName(indexName).setMode(Mode.STANDALONE).build();
+      StartIndexResponse startIndexResponse = blockingStub.startIndex(startIndexRequest);
+      assertEquals(0, startIndexResponse.getNumDocs());
+    }
+
+    grpcServer.getGlobalState().getIndex(index3).getShard(0).writer.close();
+
+    try {
+      blockingStub.ready(ReadyCheckRequest.newBuilder().setIndexNames("").build());
+      fail("Expecting exception on the previous line");
+    } catch (StatusRuntimeException e) {
+      assertEquals(e.getMessage(), "UNAVAILABLE: Indices not started: [index3]");
+    }
+
+    for (String indexNames : Arrays.asList("index1", "index1,index2")) {
       try {
         blockingStub.ready(ReadyCheckRequest.newBuilder().setIndexNames(indexNames).build());
         fail("Expecting exception on the previous line");
@@ -1209,18 +1214,45 @@ public class LuceneServerTest {
       }
     }
 
-    for (String indexNames : Arrays.asList("index3", "index1,index3", "index3,index2,index1")) {
+    for (String indexNames : Arrays.asList("index3", "index2,index3")) {
       try {
         blockingStub.ready(ReadyCheckRequest.newBuilder().setIndexNames(indexNames).build());
         fail("Expecting exception on the previous line");
       } catch (StatusRuntimeException e) {
-        assertEquals(e.getMessage(), "UNAVAILABLE: Indices do not exist: [index3]");
+        assertEquals(e.getMessage(), "UNAVAILABLE: Indices not started: [index3]");
+      }
+    }
+
+    for (String indexNames : Arrays.asList("index4", "index1,index4", "index4,index2,index1")) {
+      try {
+        blockingStub.ready(ReadyCheckRequest.newBuilder().setIndexNames(indexNames).build());
+        fail("Expecting exception on the previous line");
+      } catch (StatusRuntimeException e) {
+        assertEquals(e.getMessage(), "UNAVAILABLE: Indices do not exist: [index4]");
       }
     }
 
     HealthCheckResponse response =
         blockingStub.ready(ReadyCheckRequest.newBuilder().setIndexNames("index2").build());
     assertEquals(response.getHealth(), TransferStatusCode.Done);
+  }
+
+  @Test
+  public void testQueryCache() {
+    QueryCache queryCache = IndexSearcher.getDefaultQueryCache();
+    assertTrue(queryCache instanceof NrtQueryCache);
+
+    String configStr = String.join("\n", "queryCache:", "  enabled: false");
+    LuceneServerConfiguration configuration =
+        new LuceneServerConfiguration(new ByteArrayInputStream(configStr.getBytes()));
+    LuceneServerImpl.initQueryCache(configuration);
+    assertNull(IndexSearcher.getDefaultQueryCache());
+
+    configStr = String.join("\n", "queryCache:", "  enabled: true");
+    configuration = new LuceneServerConfiguration(new ByteArrayInputStream(configStr.getBytes()));
+    LuceneServerImpl.initQueryCache(configuration);
+    queryCache = IndexSearcher.getDefaultQueryCache();
+    assertTrue(queryCache instanceof NrtQueryCache);
   }
 
   public static List<VirtualField> getQueryVirtualFields() {
@@ -1240,6 +1272,11 @@ public class LuceneServerTest {
             .setScript(Script.newBuilder().setLang("js").setSource("5.0*_score").build())
             .build());
     return fields;
+  }
+
+  @Test
+  public void testCancellationDefaultDisabled() {
+    assertFalse(DeadlineUtils.getCancellationEnabled());
   }
 
   public static void checkHits(SearchResponse.Hit hit) {
